--- a/src/components/GameBoard/GameBoard.css
+++ b/src/components/GameBoard/GameBoard.css
@@ -1,8 +1,8 @@
-.game-board {
+.game-board-container {
     display: grid;
     grid-template: repeat(3,1fr) /repeat(3,1fr);
-    height: 200px;
-    width: 200px;
+    height: 600px;
+    width: 600px;
     justify-items: stretch;
     justify-content: space-evenly;
     align-content: center;
